--- a/src/styles/trentb10-style.css
+++ b/src/styles/trentb10-style.css
@@ -295,6 +295,32 @@ blockquote cite {
 	font-style: normal;	
 }
 
+/* Collapsibles */
+
+.collapsible {
+	background-color: #eee;
+	color: #444;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	border: none;
+	text-align: left;
+	outline: none;
+	font-size: 15px;
+}
+
+.active, .collapsible:hover {
+	background-color: #ccc;
+}
+
+.collapsible-content {
+	padding: 0 18px;
+	max-height: 0;
+	overflow: hidden;
+	transition: max-height 0.4s ease-out;
+	background-color: black;
+}
+
 /* Links */
 
 a, a:visited {
@@ -358,12 +384,8 @@ content ::-moz-selection {
 	color: #f26995;
 }
 
-/*
-
-    .          
-   _|________________         
-    |  .--.--. 
-    |  |  |  | 
-  `-`--'  '  `-
-
-*/
+/**
+ * 
+ * trentb10 (ﾉ◕ヮ◕)ﾉ*:・ﾟ✧
+ * 
+ */
