--- a/src/styles/trentb10-style.css
+++ b/src/styles/trentb10-style.css
@@ -383,6 +383,13 @@ blockquote cite {
 	transition: 0.4s;
 }
 
+/* [IFRA] IFrame */
+
+iframe {
+	margin-left: auto; margin-right: auto;
+	display: block;
+}
+
 /* Links */
 
 a, a:visited {
