--- a/src/styles/trentb10-style.css
+++ b/src/styles/trentb10-style.css
@@ -6,6 +6,7 @@
 	[NAVI]	Header > Navi
 	[PGTL]	Page Title
 	[COCO]	Content > Collapsibles
+	[COSB]	Content > Skill Box
 */
 
 /* ----------------------------- */
@@ -343,7 +344,7 @@ blockquote cite {
 	color: #7ba4d9;
 }
 
-.active, .collapsible-title:hover {
+.collapsible-title.active, .collapsible-title:hover {
 	background-color: var(--hoverBlack);
 	transition: 0.4s;
 }
@@ -354,7 +355,7 @@ blockquote cite {
 	margin-left: 5px;
 }
 
-.active:after {
+.collapsible-title.active:after {
 	content: '\2796';
 }
 
@@ -412,6 +413,62 @@ a:hover {
 a:active {
 	color: var(--pink2);
 	transition-duration: 0s;
+}
+
+/* [COSB] Skill Box */
+
+.skillbox-container {
+    display: flex;
+    border-color: white;
+    border-style: solid;
+    border-width: 1px;
+    flex-direction: column;
+    justify-content: flex-start;
+    width: 550px;
+    margin-left: auto; margin-right: auto;
+}
+
+.skillbox-skill-container {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    cursor: pointer;
+}
+
+.skillbox-skill-container:hover {
+    background-color: grey;
+
+    transition: 0.4s;
+}
+
+.skillbox-skill-info {
+    max-height: 0;
+    overflow: hidden;
+	transition: max-height 0.4s ease-out;
+}
+
+.skillbox-skill-header {
+    font-size: 16px;
+    font-weight: bold;
+    color: white;
+    text-align: right;
+    margin: 5px;
+    padding: 10px;
+    width: 100px;
+
+    transition: 0.4s;
+}
+
+.skillbox-skill-info {
+    background-color: grey;
+    padding: 0 20px 0 20px;
+}
+
+.skillbox-skill-meter-pt {
+    background-color: aqua;
+    margin: 5px;
+    padding: 2px;
+    width: 80px;
 }
 
 /* Text Selection */
