--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -34,11 +34,13 @@
 
 /* [FOIM] Font Imports */
 
-@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
-$header: 'PT Sans', Arial;
 $content: 'Raleway', 'Trebuchet MS', Arial;
+$header1: 'Fira Sans', Arial;
+$header2: 'Monda', Arial;
 
 /* [STCL] Styling Colours */
 
@@ -176,8 +178,8 @@ img.header {
 /* [HENA] Navigation Bar */
 
 .mainNavi {
-	font-family: $header;
-	font-size: 20px;
+	font-family: $header2;
+	font-size: 18px;
     position: sticky;
     top: 0;
 	transition: 0.4s;
@@ -286,13 +288,14 @@ div.page-title {
 	border-top: 5px solid $pink2;
 	max-width: 1024px;
 	margin: 30px auto 30px auto;
-	padding: 10px 10px 10px 20px;
+	padding: 10px 40px 10px 40px;
 }
 
 h1 {
 	/* for use inside div.pageTitle */
-	font-family: $header;
+	font-family: $header1;
 	font-size: 2.25rem;
+	font-weight: normal;
 	color: $pink2;
 }
 
@@ -301,7 +304,7 @@ h1 {
 /* -------------------- */
 
 h2 {
-	font-family: $header;
+	font-family: $header1;
 	font-size: 1.75rem;
 	color: $blue;
 	font-weight: normal;
@@ -316,7 +319,7 @@ h2 {
 	margin: 30px auto 30px auto;
 	max-width: 1024px;
 	min-width: 480px;
-	padding: 10px 30px 60px 30px;
+	padding: 10px 40px 60px 40px;
 	transition: 0.4s;
 	text-align: justify;
 }
@@ -345,7 +348,7 @@ blockquote cite {
 
 /* classParentString */
 .collapsible-main-container {
-	font-family: $header;
+	font-family: $header2;
 	box-shadow: 5px 5px 8px $midnightBlack;
 }
 
@@ -497,8 +500,8 @@ a:active {
 
 
 .skillbox-skill-header {
-	font-family: $header;
-    font-size: 18px;
+	font-family: $header2;
+    font-size: 16px;
     font-weight: bold;
     text-align: right;
     margin: 5px;
@@ -567,7 +570,8 @@ a:active {
 	border-top-style: solid;
 	border-width: 5px;
 	color: $pink2; 
-	font-size: 0.875rem;
+	font-size: 0.75rem;
+	font-family: $header2;
 	max-width: 1024px;
 	margin: 30px auto 40px auto;
 	padding: 10px 10px 10px 10px;
