Made more changes with the font  * Just gonna keep on fiddling with it until I get a combination I like...

--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -34,12 +34,12 @@
 
 /* [FOIM] Font Imports */
 
-@import url('https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Monda:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 
 $content: 'Raleway', 'Trebuchet MS', Arial;
-$header1: 'Fira Sans', Arial;
+$header1: 'PT Sans', Arial;
 $header2: 'Monda', Arial;
 
 /* [STCL] Styling Colours */
