--- a/src/styles/trentb10-style.scss
+++ b/src/styles/trentb10-style.scss
@@ -1,31 +1,31 @@
 /*
-	Table of Contents
+  Table of Contents
 
-	[GLVA]	Global Variables
-    [FOIM]      Font Imports
-    [STCL]      Styling Colours
+  [GLVA]	Global Variables
+  [FOIM]  Font Imports
+  [STCL]  Styling Colours
 
-    [GLEL]  Global Elements
-    [BOXS]      Box-Sizing
-    [INPT]      Input
-    [LIST]      Lists
-    [TABL]      Tables
-    [TXSL]      Text Selection
+  [GLEL]  Global Elements
+  [BOXS]    Box-Sizing
+  [INPT]    Input
+  [LIST]    Lists
+  [TABL]    Tables
+  [TXSL]    Text Selection
     
-	[HEAD] 	Header
-    [IMGE]      Image
-	[HENA]	    Navi
+  [HEAD] 	Header
+  [IMGE]    Image
+  [HENA]    Navi
 
-	[PGTL]	Page Title
+  [PGTL]	Page Title
 
-    [CONT]  Content
-    [BLQT]      Blockquotes
-	[COCO]	    Collapsibles
-	[COSB]	    Skill Box
-    [LINK]      Links
+  [CONT]  Content
+  [BLQT]    Blockquotes
+  [COCO]    Collapsibles
+  [COSB]    Skill Box
+  [LINK]    Links
 
-    [FOOT]  Footer
-    [FOLI]      Footer Links
+  [FOOT]  Footer
+  [FOLI]    Footer Links
 */
 
 /* ----------------------------- */
@@ -56,102 +56,102 @@ $orange: #ff9f50;
 $yellow: #ffd350;
 
 /* --------------------------- */
-/* -= [GLEL Global Elements =- */
+/* -= [GLEL] Global Elements =- */
 /* --------------------------- */
  
 body {
-	align-items: center;
-	background: repeating-linear-gradient(
-		135deg,
-		#070707,
-		#070707 5px,
-		$midnightBlack 5px,
-		$midnightBlack 10px
-	);
-	background-color: $midnightBlack;
-	background-attachment: fixed;
-	color: #ffffff;
-	min-width: 480px;
+  align-items: center;
+  background: repeating-linear-gradient(
+    135deg,
+    #070707,
+    #070707 5px,
+    $midnightBlack 5px,
+    $midnightBlack 10px
+  );
+  background-color: $midnightBlack;
+  background-attachment: fixed;
+  color: #ffffff;
+  min-width: 480px;
 }
 
 /* [BOXS] Box-Sizing */ 
 
 * {
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 }
 
 /* [INPT] Input */
 
 select, input [type=button], 
-			  [type=number], 
-			  [type=reset], 
-			  [type=submit], 
-			  [type=text],
-			  [type=password],
-			  [type=email] {
-	background: $midnightBlack;
-	border: none;
-	color: $green;
-	font-family: Share Tech Mono, monospace;
-	font-size: 16px;
-	padding: 2px;
+        [type=number], 
+        [type=reset], 
+        [type=submit], 
+        [type=text],
+        [type=password],
+        [type=email] {
+  background: $midnightBlack;
+  border: none;
+  color: $green;
+  font-family: Share Tech Mono, monospace;
+  font-size: 16px;
+  padding: 2px;
 }
 
 input[type=button], [type=reset], [type=submit] {
-	background: #343434;
-	border: none;
-	color: $blue;
-	font-family: "Share Tech Mono", monospace;
-	font-size: 16px;
-	padding: 10px;
-	text-transform: uppercase;
+  background: #343434;
+  border: none;
+  color: $blue;
+  font-family: "Share Tech Mono", monospace;
+  font-size: 16px;
+  padding: 10px;
+  text-transform: uppercase;
 }
 
 /* [LIST] Lists */
 
 ul.no-bullet-list {
-	list-style-type: none;
-	margin: 0;
-	padding: 0;
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 
 /* [TABL] Tables */
 
 table {
-	border-collapse: collapse;
+  border-collapse: collapse;
 }
 
 td, th {
-	padding: 8px;
-	text-align: left;
+  padding: 8px;
+  text-align: left;
 }
 
 th {
-	background-color: $blue;
-	color: $carbonBlack;
+  background-color: $blue;
+  color: $carbonBlack;
 }
 
 tr:nth-child(even) {
-	background-color: rgb(255,255,255,0.2);
+  background-color: rgb(255,255,255,0.2);
 }
 
 tr:nth-child(odd) {
-	background-color: rgb(0,0,0,0.4);
+  background-color: rgb(0,0,0,0.4);
 }
 
 /* [TXSL] Text Selection */
 
 ::selection {
-	background: $pink2; 
-	color: $carbonBlack;
+  background: $pink2; 
+  color: $carbonBlack;
 }
 
 ::-moz-selection {
-	background: $pink2;
-	color: $carbonBlack;
+  background: $pink2;
+  color: $carbonBlack;
 }
 
 /* ------------------- */
@@ -161,122 +161,122 @@ tr:nth-child(odd) {
 /* [IMGE] Image */
 
 div.image-header {
-	margin: 30px auto 30px auto;
-	max-width: 1024px;
-	min-width: 300px;
+  margin: 30px auto 30px auto;
+  max-width: 1024px;
+  min-width: 300px;
 }
 
 img.header { 
-	/* (for use inside div.imageHeader only. image size 1024x100) */
-	display: block;
-	margin: auto;
-	max-width: 100%;
-	height: auto;
-	width: auto;
+  /* (for use inside div.imageHeader only. image size 1024x100) */
+  display: block;
+  margin: auto;
+  max-width: 100%;
+  height: auto;
+  width: auto;
 }
 
 /* [HENA] Navigation Bar */
 
 .mainNavi {
-	font-family: $header2;
-	font-size: 18px;
-    position: sticky;
-    top: 0;
-	transition: 0.4s;
-	z-index: 2;
+  font-family: $header2;
+  font-size: 18px;
+  position: sticky;
+  top: 0;
+  transition: 0.4s;
+  z-index: 2;
 
-    /* Disable Text Selection */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none;
+  /* Disable Text Selection */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 }
 
 .mainNavi li {
-    float: left;
-    text-decoration: none;
+  float: left;
+  text-decoration: none;
 }
 
 .ulNavi li a {
-	border-bottom: none;
-    color: white;
-    text-decoration: none;
+  border-bottom: none;
+  color: white;
+  text-decoration: none;
 }
 
 .ulNavi {
-	border-bottom: 5px solid $orange;
-	max-width: 1024px;
-	min-width: 480px;
-    display: flex;
-	list-style-type: none;
-	margin: 30px auto 30px auto;
-	background-color: $carbonBlack;
-	padding: 0;
+  border-bottom: 5px solid $orange;
+  max-width: 1024px;
+  min-width: 480px;
+  display: flex;
+  list-style-type: none;
+  margin: 30px auto 30px auto;
+  background-color: $carbonBlack;
+  padding: 0;
 }
 
 .title {
-	font-weight: bold;
-    background-color: $carbonBlack;
-    display: block;
-    color: $orange;
-	text-align: center;
-	padding: 12px 36px 12px 36px;
+  font-weight: bold;
+  background-color: $carbonBlack;
+  display: block;
+  color: $orange;
+  text-align: center;
+  padding: 12px 36px 12px 36px;
 }
 
 .item {
-    display: block;
-    color: white;
-	text-align: center;
-	padding: 12px 18px 12px 18px;
-	transition: 0.4s;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 12px 18px 12px 18px;
+  transition: 0.4s;
 }
 
 .mainNavi .item:hover, .mainNavi .dropbtn:hover {
-    color: $orange;
-    background-color: $hoverBlack;
-	transition: 0.4s;
+  color: $orange;
+  background-color: $hoverBlack;
+  transition: 0.4s;
 }
 
 li.dropdown {
-	display: inline-block;
+  display: inline-block;
 }
 
 .dropbtn {
-    display: block;
-	text-align: center;
-	padding: 12px 18px 12px 18px;
-	transition: 0.4s;
+  display: block;
+  text-align: center;
+  padding: 12px 18px 12px 18px;
+  transition: 0.4s;
 }
 
 .dropdown-content {
-	display: none;
-	position: absolute;
-	background-color: $carbonBlack;
-	min-width: 160px;
-	transition: 0.4s;
-	z-index: 1;
+  display: none;
+  position: absolute;
+  background-color: $carbonBlack;
+  min-width: 160px;
+  transition: 0.4s;
+  z-index: 1;
 }
 
 .dropdown-content a {
-	color: black;
-	padding: 12px 16px;
-	text-decoration: none;
-	display: block;
-	text-align: left;
-	transition: 0.4s;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left;
+  transition: 0.4s;
 }
 
 .dropdown:hover .dropdown-content {
-	display: block;
+  display: block;
 }
 
 .dropdown:hover .dropbtn {
-	background-color: $hoverBlack;
+  background-color: $hoverBlack;
 }
 
 .mainNavi .dropdown-content :hover {
-	background-color:$hoverBlack;
-	color: $green;
-	transition: 0.4s;
+  background-color:$hoverBlack;
+  color: $green;
+  transition: 0.4s;
 }
 
 /* ----------------------- */
@@ -284,19 +284,19 @@ li.dropdown {
 /* ----------------------- */
 
 div.page-title {
-	background-image: linear-gradient($vampireBlack, $carbonBlack);
-	border-top: 5px solid $pink2;
-	max-width: 1024px;
-	margin: 30px auto 30px auto;
-	padding: 10px 40px 10px 40px;
+  background-image: linear-gradient($vampireBlack, $carbonBlack);
+  border-top: 5px solid $pink2;
+  max-width: 1024px;
+  margin: 30px auto 30px auto;
+  padding: 10px 40px 10px 40px;
 }
 
 h1 {
-	/* for use inside div.pageTitle */
-	font-family: $header1;
-	font-size: 2.25rem;
-	font-weight: normal;
-	color: $pink2;
+  /* for use inside div.pageTitle */
+  font-family: $header1;
+  font-size: 2.25rem;
+  font-weight: normal;
+  color: $pink2;
 }
 
 /* -------------------- */
@@ -304,143 +304,143 @@ h1 {
 /* -------------------- */
 
 h2 {
-	font-family: $header1;
-	font-size: 1.75rem;
-	color: $blue;
-	font-weight: normal;
+  font-family: $header1;
+  font-size: 1.75rem;
+  color: $blue;
+  font-weight: normal;
 }
 
 .content-body {
-	font-family: $content;
-	font-size: 1.125rem;
-	background-image: linear-gradient($vampireBlack, $carbonBlack);
-	border-top: 5px solid $blue;
-	display: block;
-	margin: 30px auto 30px auto;
-	max-width: 1024px;
-	min-width: 480px;
-	padding: 10px 40px 60px 40px;
-	transition: 0.4s;
-	text-align: justify;
+  font-family: $content;
+  font-size: 1.125rem;
+  background-image: linear-gradient($vampireBlack, $carbonBlack);
+  border-top: 5px solid $blue;
+  display: block;
+  margin: 30px auto 30px auto;
+  max-width: 1024px;
+  min-width: 480px;
+  padding: 10px 40px 60px 40px;
+  transition: 0.4s;
+  text-align: justify;
 }
 
 /* [BLQT] Blockquotes */
 
 blockquote {
-	border-left: 4px solid $blue;
-	margin-left: 10px;
+  border-left: 4px solid $blue;
+  margin-left: 10px;
 }
 
 blockquote p {
-	padding-left: 10px;
+  padding-left: 10px;
 }
 
 blockquote q {
-	font-style: italic;
-	font-weight: bold;
+  font-style: italic;
+  font-weight: bold;
 }
 
 blockquote cite {
-	font-style: normal;	
+  font-style: normal;	
 }
 
 /* [COCO] Collapsibles */
 
 /* classParentString */
 .collapsible-main-container {
-	font-family: $header2;
-	box-shadow: 5px 5px 8px $midnightBlack;
+  font-family: $header2;
+  box-shadow: 5px 5px 8px $midnightBlack;
 }
 
 /* triggerClassName and triggerOpenedClassName */
 .collapsible-title {
-    display: block;
-	background-color: $midnightBlack;
-	cursor: pointer;
-	font-size: 1.5rem;
-    padding: 18px;
-	text-align: left;
-	transition: 0.4s;
-	outline: none;
+  display: block;
+  background-color: $midnightBlack;
+  cursor: pointer;
+  font-size: 1.5rem;
+  padding: 18px;
+  text-align: left;
+  transition: 0.4s;
+  outline: none;
 
-    /* Disable Text Selection */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none;
+  /* Disable Text Selection */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 
-    &:after {
-        content: '\02795';
-        float: right;
-        margin-left: 5px;
-    }
+  &:after {
+      content: '\02795';
+      float: right;
+      margin-left: 5px;
+  }
 
-    &.is-open {
-        &:after {
-            content: '\2796';
-        }
-    }
+  &.is-open {
+      &:after {
+          content: '\2796';
+      }
+  }
 
 }
 
 .cencol {
-	border-bottom: 5px solid #d4df38;
-	color: #d4df38;
+  border-bottom: 5px solid #d4df38;
+  color: #d4df38;
 }
 
 .uoft {
-	border-bottom: 5px solid #7ba4d9;
-	color: #7ba4d9;
+  border-bottom: 5px solid #7ba4d9;
+  color: #7ba4d9;
 }
 
 .collapsible-title:hover {
-	background-color: $hoverBlack;
-	transition: 0.4s;
+  background-color: $hoverBlack;
+  transition: 0.4s;
 }
 
 /* triggerClassName and triggerOpenedClassName */
 .collapsible-nested-header {
-	background-color: $carbonBlack;
-	color: $blue;
-	cursor: default;
-	padding: 12px 24px;
-    display: block;
-	cursor: pointer;
-	text-align: left;
-	outline: none;
+  background-color: $carbonBlack;
+  color: $blue;
+  cursor: default;
+  padding: 12px 24px;
+  display: block;
+  cursor: pointer;
+  text-align: left;
+  outline: none;
 
-    /* Disable Text Selection */
-    -moz-user-select: none; /* Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none;
+  /* Disable Text Selection */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
 
-    &:after {
-		content: '\02795';
-        float: right;
-        margin-left: 5px;
-    }
+  &:after {
+  content: '\02795';
+      float: right;
+      margin-left: 5px;
+  }
 
-    &.is-open {
-        &:after {
-            content: '\2796';
-        }
-    }
+  &.is-open {
+      &:after {
+          content: '\2796';
+      }
+  }
 }
 
 .collapsible-nested-header:hover {
-	background-color: $hoverBlack;
-	transition: 0.4s;
+  background-color: $hoverBlack;
+  transition: 0.4s;
 }
 
 /* Use as its own div */
 .collapsible-content {
-	cursor: pointer;
-	padding: 12px 0 12px 36px;
-    transition:0.4s;
+  cursor: pointer;
+  padding: 12px 0 12px 36px;
+  transition:0.4s;
 }
 
 .collapsible-content:hover {
-    background-color: $hoverBlack;
-    transition:0.4s;
+  background-color: $hoverBlack;
+  transition:0.4s;
 }
 
 
@@ -448,114 +448,114 @@ blockquote cite {
 /* [IFRA] IFrame */
 
 iframe {
-	margin-left: auto; margin-right: auto;
-	display: block;
+  margin-left: auto; margin-right: auto;
+  display: block;
 }
 
 /* [LINK] Links */
 
 a, a:visited {
-	border-bottom-style: solid;
-	border-width: thin;
-	color: #ffffff;
-	text-decoration: none;
-	transition-property: color;
-	transition-duration: 0.4s;
+  border-bottom-style: solid;
+  border-width: thin;
+  color: #ffffff;
+  text-decoration: none;
+  transition-property: color;
+  transition-duration: 0.4s;
 }
 
 a:hover {
-	color: $green;
-	transition: 0.4s;
+  color: $green;
+  transition: 0.4s;
 }
 
 a:active {
-	color: $pink2;
-	transition-duration: 0s;
+  color: $pink2;
+  transition-duration: 0s;
 }
 
 /* [COSB] Skill Box */
 
 .skillbox-container {
-	background-color: $vampireBlack;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    width: 500px;
-    margin-left: auto; margin-right: auto;
+  background-color: $vampireBlack;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  width: 500px;
+  margin-left: auto; margin-right: auto;
 }
 
 /* triggerClassName and triggerOpenedClassName */
 .skillbox-skill-container {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    cursor: pointer;
-	transition: 0.4s;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  cursor: pointer;
+  transition: 0.4s;
 }
 
 .skillbox-skill-container:hover {
-    background-color: $hoverBlack;
-    transition: 0.4s;
+  background-color: $hoverBlack;
+  transition: 0.4s;
 }
 
 
 .skillbox-skill-header {
-	font-family: $header2;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: right;
-    margin: 5px;
-    padding: 10px;
-    width: 100px;
+  font-family: $header2;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: right;
+  margin: 5px;
+  padding: 10px;
+  width: 100px;
 
-    transition: 0.4s;
+  transition: 0.4s;
 }
 
 .skillbox-skill-info {
-	font-size: 1rem;
-	background-color: $midnightBlack;
-    padding: 6px 24px;
-	cursor: default;
+  font-size: 1rem;
+  background-color: $midnightBlack;
+  padding: 6px 24px;
+  cursor: default;
 }
 
 .skillbox-skill-meter-pt {
-    background-color: $blue;
-    margin: 5px;
-    padding: 2px;
-    width: 80px;
+  background-color: $blue;
+  margin: 5px;
+  padding: 2px;
+  width: 80px;
 }
 
 .skillbox-skill-meter-empty {
-    background-color: #323232;
-    margin: 5px;
-    padding: 2px;
-    width: 80px;
+  background-color: #323232;
+  margin: 5px;
+  padding: 2px;
+  width: 80px;
 }
 
 .skillbox-skill-legend-container {
-    align-items: center;
-    display: flex;
-    flex-direction: row;
-    cursor: default;
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  cursor: default;
 }
 
 .skillbox-skill-legend-label {
-	font-size: 12px;
-	color: #959595;
-	text-align: center;
-	position: relative;
-	top: 5px;
-    margin: 5px;
-    width: 80px;
-	z-index: 1;
+  font-size: 12px;
+  color: #959595;
+  text-align: center;
+  position: relative;
+  top: 5px;
+  margin: 5px;
+  width: 80px;
+  z-index: 1;
 }
 
 .skillbox-skill-hint {
-	font-size: 12px;
-	color: #959595;
-	text-align: right;
-	margin: 5px;
-	padding: 10px;
+  font-size: 12px;
+  color: #959595;
+  text-align: right;
+  margin: 5px;
+  padding: 10px;
 }
 
 
@@ -564,31 +564,31 @@ a:active {
 /* ------------------- */
 
 .footer-content {
-	background-image: linear-gradient($vampireBlack, $carbonBlack);
-	background-color: $carbonBlack;
-	border-top: 5px solid $pink2;
-	border-top-style: solid;
-	border-width: 5px;
-	color: $pink2; 
-	font-size: 0.75rem;
-	font-family: $header2;
-	max-width: 1024px;
-	margin: 30px auto 40px auto;
-	padding: 10px 10px 10px 10px;
+  background-image: linear-gradient($vampireBlack, $carbonBlack);
+  background-color: $carbonBlack;
+  border-top: 5px solid $pink2;
+  border-top-style: solid;
+  border-width: 5px;
+  color: $pink2; 
+  font-size: 0.75rem;
+  font-family: $header2;
+  max-width: 1024px;
+  margin: 30px auto 40px auto;
+  padding: 10px 10px 10px 10px;
 }
 
 /* [FOLI] Footer Links */
 
 .footer-content a, .footer-content a:visited {
-	color: $pink2;
+  color: $pink2;
 }
 
 .footer-content a:hover{
-	color: #ffffff;
+  color: #ffffff;
 }
 
 .footer-content a:active {
-	color: $pink2;
+  color: $pink2;
 }
 
 /**
